✨ feat: Note 17 & Polish some note

--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -1,7 +1,7 @@
 # 机器学习介绍与线性模型
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
@@ -281,9 +281,6 @@ $$
 
 ## Reference
 
-[^1]: [L1，L2 正则化的理解](https://hellojialee.github.io/2020/01/28/L1%E5%92%8CL2%E6%AD%A3%E5%88%99%E5%8C%96%E7%9A%84%E7%90%86%E8%A7%A3/)
-[^2]: [SlimSRecovery / 线性回归模型估计](https://zhuanlan.zhihu.com/p/194447481)
-
 关于最大化高斯分布的后验概率等价于最小化二阶范数的具体推导，还有一个由 GPT4 生成的推导过程：
 
 > 在高斯分布下，假设权重 $w$ 遵循均值为 0，方差为 $\sigma^2$ 的正态分布，即 $w \sim \mathcal{N}(0, \sigma^2)$。那么权重的概率密度函数（PDF）为：
@@ -322,4 +319,7 @@ $$
 > J'(w) = J(w) + \alpha w^2
 > $$
 >
-> 这显示了在高斯分布下 $\log P(w)$ 的效果等价于在代价函数中增加 $L2$​ 正则项。这种正则化有时也被称为权重衰减，它鼓励模型学习更小的权重，从而可以提高模型的泛化能力，防止过拟合。
+> 这显示了在高斯分布下 $\log P(w)$ 的效果等价于在代价函数中增加 $L2$​​ 正则项。这种正则化有时也被称为权重衰减，它鼓励模型学习更小的权重，从而可以提高模型的泛化能力，防止过拟合。
+
+[^1]: [L1，L2 正则化的理解](https://hellojialee.github.io/2020/01/28/L1%E5%92%8CL2%E6%AD%A3%E5%88%99%E5%8C%96%E7%9A%84%E7%90%86%E8%A7%A3/)
+[^2]: [SlimSRecovery / 线性回归模型估计](https://zhuanlan.zhihu.com/p/194447481)
