--- a/Note/04机器学习中的线性回归与分类问题.md
+++ b/Note/04机器学习中的线性回归与分类问题.md
@@ -1,7 +1,7 @@
 # 机器学习中的线性回归与分类问题
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
@@ -34,10 +34,10 @@ $$
 
 $$
 \begin{aligned}
-(1 + e^{-x})*\sigma(x) &= 1\\
-e^{-x}*(-1)*\sigma(x) + \sigma'(x)*(1 + e^{-x}) &=0\\
-\sigma'(x)*(1 + e^{-x}) &= e^{-x}*\sigma(x)\\
-\sigma'(x)&=(1-\sigma(x))*\sigma(x)
+(1 + e^{-x})·\sigma(x) &= 1\\
+e^{-x}·(-1)·\sigma(x) + \sigma'(x)·(1 + e^{-x}) &=0\\
+\sigma'(x)·(1 + e^{-x}) &= e^{-x}·\sigma(x)\\
+\sigma'(x)&=(1-\sigma(x))·\sigma(x)
 \end{aligned}
 $$
 
