--- a/Note/05神经网络基础.md
+++ b/Note/05神经网络基础.md
@@ -1,14 +1,14 @@
 # 神经网络基础
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
 
 ## 神经元模型
 
-![neuron](./05神经网络基础.assets/neuron.png)
+<img src="05神经网络基础.assets/neuron.png" alt="neuron" style="zoom:50%;" />
 
 神经元模型是神经网络的基本单元，它接收输入信号，对输入信号进行 **加权求和** ，权重 / 参数（weight/parameter）的绝对值越大，则代表对应的输入 $x$ 对输出影响越大，然后通过激活函数处理，最后输出结果。
 
