--- a/Note/13局部搜索和优化.md
+++ b/Note/13局部搜索和优化.md
@@ -1,7 +1,7 @@
 # 局部搜索和优化
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
@@ -18,23 +18,19 @@
 
 为了快速解决 100+ 皇后问题，我们不再寻找全部解，而是 **只找一个可行解**。
 
-为此，我们不再关心得到解的路径（因为全局搜索路径太长，内存不够），只需要得到解。我们将启发式函数被改成状态估值函数，并充分利用它来寻找解。
+我们不再关心得到解的路径（如，先摆第一个，再摆第二个...），只需要得到解（只要最后是解就行）。我们将启发式函数被改成状态估值函数，并充分利用它来寻找解。
 
-**局部调整**：先将八个皇后随意摆放到棋盘的八列上，然后调整被攻击的皇后，直到八个皇后互不攻击。
+**全局搜索**：对整个状态空间搜索，从初始状态开始（摆了零个）。利用摆皇后这个动作进行状态转移（动作确定路径），从摆了 $n$ 个变到摆了 $n+1$​ 个
 
-### 模型描述
+**局部调整**：先将八个皇后随意摆放到棋盘的八列上，然后调整被攻击的皇后，直到八个皇后互不攻击
 
--   **初始状态 $S_0$**：八个皇后在棋盘上，每列有一个皇后。
--   **动作**：移动任意列上的皇后到同列其他行（$8 \times 7$ 种可能）。
+### 八皇后问题重新建模
+
+-   **初始状态 $S_0$**：八个皇后在棋盘上，每列有一个皇后。因为如果 8 个皇后不相互攻击，那么 8 个皇后肯定是在不同列的。
+-   **动作**：移动任意列上的皇后到同列其他行（每个皇后有 7 个可能的动作，8 个皇后一共有 $8 \times 7 = 56$ 种可能动作）。
 -   **状态转移**：移动后棋盘的样子（ **邻居** 状态，注意不再是父子状态，它们是 **并行** 关系，56 个）。
--   **目标状态 Goal**：皇后不互相攻击。
--   **状态估值函数 $h$**：互相攻击的皇后对的数目，表示当前状态的好坏。$h(S)$ 以当前状态 $S$ 为输入，输出一个评估值。
-
-### 算法定义
-
-1. **初始状态**：在每一列的随机位置放一个皇后。因为如果 8 个皇后不相互攻击，那么 8 个皇后肯定是在不同列的。
-2. **动作定义**：每个皇后只能在自己的列上换行，每个皇后有 7 个可能的动作，8 个皇后一共有 56 个可能的动作。
-3. **状态估值函数**：$h$ 表示当前状态的好坏。如果两个皇后可以相互攻击，则 $h$ 加 1。
+-   **目标状态**：皇后不互相攻击。
+-   **状态估值函数 $h$**：互相攻击的皇后对的数目，表示当前状态的好坏。如果两个皇后可以相互攻击，则 $h$ 加 1。$h(S)$ 以当前状态 $S$ 为输入，输出一个评估值。
 
 ### 优化目标
 
@@ -54,28 +50,27 @@
 
 ![solution_space](13局部搜索和优化.assets/solution_space.png)
 
-假设状态是一个连续变化的值，X 轴表示状态 $x$，Y 轴表示评估值 $f(x)$。一维情况的评估值变化如上图所示。
+假设状态是一个连续变化的值，X 轴表示状态 $x$，Y 轴表示评估值 $f(x)$。对于一维的情况，评估值变化与各概念的关系如上图所示。
 
--   **局部极值**：某个区域内，某个点的评估值最高（或最低）。多个局部极值点存在时，贪婪策略最终到达的极值点取决于 **初始状态**。
+-   **局部极值**：某个区域内，某个点的评估值最高（或最低）。
+
+    多个局部极值点存在时，贪婪策略最终到达的极值点取决于 **初始状态**。
+
 -   **全局最优**：全局最优解是所有局部最优解中评估值最高（或最低）的解。
+
 -   **平台**：邻近状态评估值相同，无法决定移动方向。
+
 -   **肩状平台**：一侧评估值可上升，另一侧下降。
 
 实际情况中，状态的维度会更高（甚至无法可视化）。
 
 ### 解空间形状带来的问题
 
-#### 跳出局部极值点而奔向全局最优点的方法
+如何跳出局部极值点而奔向全局最优点？
 
--   使用 **模拟退火** 算法，通过引入概率性跳出局部极值。
--   采用 **遗传算法**，通过选择、交叉和变异操作，探索更大的解空间。
+进入平台时如何解决？
 
-这两个在后文都会有介绍。
-
-#### 进入平台时的解决方法
-
--   **随机重启**：多次从不同的初始点运行算法，增加找到全局最优解的概率。
--   **扰动方法**：在解空间中引入小的随机扰动，打破平台的均衡状态。
+这些在后文都会有介绍。
 
 #### 局部优化算法的完备性和最优性
 
@@ -84,7 +79,9 @@
 
 ## 爬山法（Hill Climbing）
 
-爬山法是一种局部搜索算法，主要用于求解优化问题。以下是几个主要版本及其特点：
+爬山法是一种局部搜索算法，主要用于求解优化问题。
+
+以下是几个主要版本及其特点：
 
 ### 最陡下降爬山法（Steepest-Ascent Hill-Climbing）
 
@@ -96,10 +93,25 @@
 
 #### 伪代码
 
+$$
+\begin{array}{l}
+\textbf{function} \ \text{HILL-CLIMBING}(problem) \ \textbf{returns} \ \text{a state that is a local maximum} \\
+\quad \text{// 初始化当前节点为问题的初始状态} \\
+\quad \text{current} \leftarrow \text{MAKE-NODE}(problem.\text{INITIAL-STATE}) \\
+\quad \text{loop do} \\
+\quad \quad \text{// 找到当前节点的最高值后继节点} \\
+\quad \quad \text{neighbor} \leftarrow \text{a highest-valued successor of current} \\
+\quad \quad \text{// 如果邻居节点的值不大于当前节点的值，则返回当前节点的状态} \\
+\quad \quad \text{if neighbor.VALUE} \leq \text{current.VALUE then return current.STATE} \\
+\quad \quad \text{// 更新当前节点为邻居节点} \\
+\quad \quad \text{current} \leftarrow \text{neighbor} \\
+\end{array}
+$$
+
 1. 将初始状态设置为当前状态。
 2. 循环：
     - 找出当前状态下估值最大的邻居节点。
-    - 如果邻居节点的估值小于当前状态，则返回当前状态作为解。
+    - 如果邻居节点的估值小于当前状态，则返回当前状态作为解（这代表当前状态是局部最优解）。
     - 否则，将当前状态更新为邻居节点。
 
 优点：内存开销小，只需要存储当前状态。
@@ -118,7 +130,7 @@
 
 #### 算法
 
--   **从更优的邻居点中随机选择一个** 进行移动，而 **不是选择最优点** （像最陡爬山法一样）。
+-   从 **更优** 的邻居点中 **随机选择一个** 进行移动，而 **不是选择最优点** （那就是最陡爬山法了）。
 -   比最陡下降爬山法 **收敛慢**，但在某些空间中 **可能找到更优的解**。
 -   选择概率可以根据陡峭程度设定，以加速收敛。
 
@@ -147,7 +159,7 @@
 
 -   **找不到解时，从随机位置重新开始**。
 
--   多次随机产生初始状态，接近完备，因为总会有一个初始状态能找到解。
+-   多次随机产生初始状态，接近完备，因为总会有一个初始状态能找到解（还有可能直接初始化到了解的位置（bushi））。
 
 成功与否 **取决于状态空间的形状**，如果局部极值和平台不多，能快速找到好的解。
 
@@ -157,36 +169,46 @@
 
 ### 过往问题
 
-#### 爬山法
+1. 爬山法：只向更优邻居点移动，不会向状态估值更差的邻居移动，可能 **陷入局部极值**，因此是不完备的。
 
-只向更优邻居点移动，不会向状态估值更差的邻居移动，可能 **陷入局部极值**，因此是不完备的。
+2. 纯粹的随机游走算法
+    - 不使用 $h(n)$ 的搜索算法。
+    - 等概率地向任何一个邻居移动，是 **完备** 的，但却是 **非常低效的**。
 
-#### 纯粹的随机游走算法
+从而，我们想到是否可以适当的结合两种算法，利用爬山法加快搜索，利用随机游走算法的随机性提高完备程度。
 
--   不使用 $h(n)$ 的搜索算法。
--   等概率地向任何一个邻居移动，是 **完备** 的，但却是 **非常低效的**。
+仿照物理中的退火，我们提出如下思想：
+
+-   在搜索的初期以一个较大概率允许向下走
+-   这个概率和这一步 “坏” 的程度成指数关系。
+-   随着时间的推移这个概率会变小，这个概率会随着 “温度” 的下降而下降。
+
+我们可以设法让 “温度” 足够慢地下降，此时算法会最终以接近 1 的概率找到全局最优解（因为这样会很接近随机游走算法）。
 
 ### 伪代码
 
-```c
-function SIMULATED_ANNEALING(problem, schedule)
-    '''
-    returns a solution state
-    inputs: problem,
-        schedule, # 一个从时间 t 到温度 T 的映射函数
-
-    current ← MAKE-NODE(problem.INITIAL-STATE)
-    '''
-    for t = 1 to ∞ do # t 是时间步
-        T ← schedule(t)  # 时间t到温度T的映射函数
-        if T = 0 then return current
-        next ← a randomly selected successor of current
-        ΔE ← next.VALUE - current.VALUE
-        if ΔE > 0 then current ← next
-        else current ← next only with probability e^(ΔE/T)
-```
-
-#### 关键概念
+$$
+\begin{array}{l}
+\textbf{function} \ \text{SIMULATED-ANNEALING}(problem, schedule) \ \textbf{returns} \ \text{a solution state} \\
+\quad \text{// 输入: problem，一个问题} \\
+\quad \text{// schedule，一个从时间到“温度”的映射} \\
+\\
+\quad \text{// 初始化当前节点为问题的初始状态} \\
+\quad current \leftarrow \text{MAKE-NODE}(problem.\text{INITIAL-STATE}) \\
+\quad \textbf{for} \ t = 1 \ \text{to} \ \infty \ \textbf{do} \\
+\quad \quad \text{// 根据时间 t 计算当前温度} \\
+\quad \quad T \leftarrow \text{schedule}(t) \\
+\quad \quad \textbf{if} \ T = 0 \ \textbf{then return} \ current \\
+\quad \quad \text{// 随机选择当前节点的一个后继节点} \\
+\quad \quad next \leftarrow \text{a randomly selected successor of} \ current \\
+\quad \quad \text{// 计算邻居状态和当前状态的估值差异} \\
+\quad \quad \Delta E \leftarrow \text{next.VALUE} - \text{current.VALUE} \\
+\quad \quad \text{// 如果邻居状态更好，直接跳到邻居状态} \\
+\quad \quad \textbf{if} \ \Delta E > 0 \ \textbf{then} \ current \leftarrow next \\
+\quad \quad \text{// 否则，以 $e^{\Delta E / T}$ 的概率接受新的节点} \\
+\quad \quad \textbf{else} \ current \leftarrow next \ \text{only with probability} \ e^{\Delta E / T} \\
+\end{array}
+$$
 
 -   **温度**：表示为 $T$，随着时间 $t$ 的变化而变化。
 
@@ -197,9 +219,9 @@ function SIMULATED_ANNEALING(problem, schedule)
     -   $T$ 在指数分母上，随着时间增加跳跃概率越来越小。
     -   $\Delta E$ 在指数分子上，跳跃概率为随着 $\Delta E$ 的增加而增加。
 
-        当 $\Delta E$ 为正时，跳跃概率为 1，直接跳跃到新的邻居状态。这对应邻居估值高于当前状态，跳过去是优化的。
+        当 $\Delta E$ 为正时，直接跳跃到新的邻居状态。这对应邻居估值高于当前状态，跳过去是优化的。
 
-        当 $\Delta E$ 为负时，跳跃概率为 $e^{\Delta E / T}$​，跳跃概率随着温度的降低而降低。这对应跳过去是非优化的。但是正是因为在非优化的情况下还有概率选择跳跃，所以模拟退火算法能够跳出局部最优，增加达到全局最优的可能。
+        当 $\Delta E$ 为负时，跳跃概率为 $e^{\Delta E / T}$​，跳跃概率随着温度的降低而降低。这对应跳过去是非优化的。这样看上去会更差，但是正是因为在非优化的情况下还有概率选择跳跃，所以模拟退火算法能够跳出局部最优，增加达到全局最优的可能。
 
 #### 超参数（Hyper-parameters）选择
 
@@ -224,7 +246,9 @@ function SIMULATED_ANNEALING(problem, schedule)
 -   **爬山法**：简单搜索法，可能陷入局部最优。
 -   **模拟退火**：通过概率跳跃机制，有效跳出局部极值，寻找全局最优解。
 
-**内存开销**：这两个算法都只记录当前节点（而不是像之前的搜索树一样记录全部的节点状态），内存不会随着时间增加。
+**内存开销**：这两个算法都只记录当前节点（而不是像之前的全局搜索的搜索树一样记录很多的节点状态），内存不会随着时间增加。
+
+不过，这也是缺点，因为没法很好的利用内存来加快搜索。
 
 ## 局部束搜索（Local Beam Search）
 
@@ -236,12 +260,14 @@ function SIMULATED_ANNEALING(problem, schedule)
 
 ### 比较
 
--   随机重启爬山法：各搜索独立进行，**不通讯**。
+局部束算法不同于同时运行的多个随机重启爬山法。
+
+-   同时运行的多个随机重启爬山法：各搜索独立进行，**不通讯**。
 -   局部束搜索：第 3 步中选择最优的 $k$ 个后继作为新状态，**这些状态间相互通讯**。如果一个状态找到多个好的后继，会告知其他状态一同继续搜索。
 
 ### 问题
 
-基础版本的局部束搜索易于聚集到状态空间中的一个小局部区域，缺乏多样性，使得在寻找更优解方面与爬山法相似，容易陷入局部极值点。
+基础版本的局部束搜索易于聚集到状态空间中的一个小局部区域，缺乏多样性，使得在寻找更优解方面与爬山法相似，**容易陷入局部极值点**。
 
 ### 缓解方案
 
@@ -257,21 +283,31 @@ function SIMULATED_ANNEALING(problem, schedule)
 
 ![genetic_algorithms_2](13局部搜索和优化.assets/genetic_algorithms_2.png)
 
+### 伪代码
+
+![genetic_pesudo_code](13局部搜索和优化.assets/genetic_pesudo_code.png)
+
 ### 主要特点
 
--   **后代多样性大**：遗传算法类似于 **高级生物的有性繁殖**，**后代多样性大**，变异概率高，**不易陷入局部最优**。
--   与之对比，局部束搜索和随机束搜索类似于单细胞生物的无性繁殖，后代多样性小，容易陷入局部最优。
+**后代多样性大**：遗传算法类似于 **高级生物的有性繁殖**，**后代多样性大**，变异概率高，**不易陷入局部最优**。
+
+注意，这也同时导致了遗传算法的不稳定性。
 
 遗传算法结合了 **爬山法** 和 **随机探索**，并在并行的搜索线程中交换信息。
 
--   **交换子串** 是遗传算法的主要优点。
+-   **交换子串** 是遗传算法的主要优点，可以将优秀的功能块组合起来，提高后代的质量。
 -   数学上，如果父代编码是随机的，交叉并不会带来好处。
 -   直觉上，交叉可以将 **具有良好功能的块** 组合在一起，从而产生更好的下一代。
 
-### 总结
+### 模式与状态
 
--   遗传算法结合了 **爬山法** 和 **随机探索**。
--   **子串交换** 可以将优秀的功能块组合起来，提高后代的质量。
+1. **模式 Schema**：在遗传算法中，模式（Schema）指的是一种部分子串，可以包含特定位置的固定值，也可以有任意值。例如，在一个二进制字符串中，模式 1\*0 表示以 1 开头，以 0 结尾，中间的位可以是 0 或 1。
+
+2. **模式的优越性**：如果一个模式在群体中表现得比平均水平好，那么这个模式会更有可能通过遗传操作（选择、交叉、变异）传递给下一代。这意味着，具有这种模式的个体数量会在后代中增加。
+
+3. **良好模式的积累**：当一个模式能够很好地表达问题中的重要特征时，遗传算法的表现会更好。
+
+4. **状态的良好表达**：为了使遗传算法表现良好，问题的状态需要被良好地表达。这意味着在编码方案中，重要特征和模式需要被明确地表示出来，以便遗传算法能够有效地选择和遗传这些特征。
 
 ## 连续空间中的局部搜索
 
@@ -284,17 +320,17 @@ function SIMULATED_ANNEALING(problem, schedule)
 目标函数：
 
 $$
-    f(x_1,y_1,x_2,y_2,x_3,y_3)=\sum_{i=1}^3\sum_{c\in C_i}(x_i-x_c)^2+(y_i-y_c)^2
+f(x_1,y_1,x_2,y_2,x_3,y_3)=\sum_{i=1}^3\sum_{c\in C_i}[(x_i-x_c)^2+(y_i-y_c)^2]
 $$
 
-其中 $C_i$ 表示离机场 i 最近的城市集合。目标是使 $f$ 最小。
+其中 $C_i$ 表示离机场 $i$ 最近的城市集合。目标是使 $f$ 最小。
 
 ### 离散化方法
 
 通过将地图坐标离散化来解决连续问题。
 
 -   每次移动一个机场的 $x$ 或 $y$ 坐标 $±δ$， $δ$ 越小，精度越高。
--   每个机场有 12 个可能的邻居。
+-   每个机场的当前状态有 12 个可能的邻居状态。
 
 #### 局部搜索算法
 
@@ -306,7 +342,7 @@ $$
 
 -   初始状态： $S_0 = (x_1, y_1, x_2, y_2, x_3, y_3)$，随机位置
 -   动作： 任何一个 $x_i$ 或 $y_i$ 都可以 $\pm\delta$（12 个合法动作）
--   状态转移： 采取动作后的位置（邻居状态，12 个）
+-   状态转移： 采取动作后的位置（转移到 12 个邻居状态之一）
 -   目标状态： 使得 $f(x_1, y_1, x_2, y_2, x_3, y_3)$ 最小的 $x, y$ 取值
 -   状态估值函数： $h = f(x_1, y_1, x_2, y_2, x_3, y_3)$
 
@@ -322,24 +358,62 @@ $$
 
 2. 梯度下降 / 上升：
 
-    若函数可微：$x\pm\alpha f'(x)$，其中，$\alpha$ 是学习率 / 步长，$f'(x)$​ 是梯度。此时不需要求具体的离散后的邻居的估值都可以知道方向
+    若函数可微，可以借助梯度信息来更新（而不需要求具体的离散后的邻居的估值）：
 
-    - 如果 $\alpha$​ 太小，需要太多的步骤、更新慢
-    - 如果 $\alpha$ 太大，搜索可能会越过极值点
+    $$
+    x\leftarrow x\pm\nabla f(x)
+    $$
+
+    其中：
+
+    - $\alpha$ 是学习率 / 步长
+
+        - 如果 $\alpha$​ 太小，需要太多的步骤、更新慢
+        - 如果 $\alpha$ 太大，搜索可能会越过极值点
+
+    - $\nabla f(x)$ 是梯度
+    - $\pm$ 对应不同的优化方向。
 
     若估值函数不可微，则使用 **经验梯度** 的值法
 
 和在离散空间一样，在连续空间里，局部搜索算法的最大难题仍是 **局部极值和平台**。为此，采用和离散空间一样的随机重启和模拟退火经常是有效的。
 
-可以类推一维的情况到高维。
+## 最小化冲突算法
 
-## 八皇后问题的 CSP 建模
+最小化冲突算法用以解决 **约束满足问题（CSP）**。
 
-八皇后问题可以建模成 “约束满足问题”（CSP）
+**约束满足问题（CSP, Constraint Satisfaction Problem）**：在一组变量和一组约束条件下寻找一个变量赋值的过程，使得所有变量满足给定的约束条件。
 
-约束满足问题（CSP, Constraint Satisfaction Problem）是指在一组变量和一组约束条件下寻找一个变量赋值的过程，使得所有变量满足给定的约束条件。CSP 可以用来解决各种组合优化问题，如调度问题、地图着色问题等。
+CSP 的细节在后文讨论。
 
-八皇后问题的目标是将八个皇后放置在一个 8x8 的国际象棋棋盘上，使得没有两个皇后处于同一行、同一列或同一对角线上。我们可以通过以下步骤将其建模为一个 CSP：
+### 最小化冲突算法伪代码
+
+$$
+\begin{array}{l}
+\text{// 定义函数 MIN-CONFLICTS，输入为约束满足问题 csp 和最大步数 max\_steps，返回一个解或失败} \\
+\textbf{function} \ \text{MIN-CONFLICTS}(csp, max\_steps) \ \textbf{returns} \ \text{a solution or failure} \\
+\quad \text{// 输入：csp，一个约束满足问题} \\
+\quad \text{// max\_steps，放弃前允许的最大步骤数} \\
+\quad \text{// current 是 csp 的一个初始完全赋值} \\
+\quad \text{current} \leftarrow \text{an initial complete assignment for } csp \\
+\quad \text{// 从 1 到 max\_steps 进行循环} \\
+\quad \textbf{for} \ i = 1 \ \textbf{to} \ max\_steps \ \textbf{do} \\
+\quad \quad \text{// 如果 current 是 csp 的一个解，则返回 current} \\
+\quad \quad \textbf{if} \ current \ \textbf{is a solution for} \ csp \ \textbf{then return} \ current \\
+\quad \quad \text{// var 是从 csp.VARIABLES 中随机选择的一个冲突变量} \\
+\quad \quad \text{var} \leftarrow \ \text{a randomly chosen conflicted variable from } csp.\text{VARIABLES} \\
+\quad \quad \text{// value 是使 CONFLICTS(var, v, current, csp) 最小的 var 的值 v} \\
+\quad \quad \text{value} \leftarrow \ \text{the value } v \ \text{for } var \ \text{that minimizes CONFLICTS}(var, v, current, csp) \\
+\quad \quad \text{// 在 current 中设置 var = value} \\
+\quad \quad \text{set } var = value \ \text{in } current \\
+\quad \text{// 如果循环结束仍未找到解，则返回失败} \\
+\quad \textbf{return} \ \text{failure}
+\end{array}
+$$
+
+### 八皇后问题的 CSP 建模
+
+我们可以通过以下步骤将八皇后问题建模为一个 CSP：
 
 1. **变量定义**：定义 8 个变量，每个变量表示一个皇后的位置。通常用 $Q_i$ 表示第 $i$ 行上的皇后所在的列位置。
 2. **变量取值范围**：每个变量 $Q_i$ 的取值范围是 $\{1, 2, 3, 4, 5, 6, 7, 8\}$，表示皇后可以放在第 $i$ 行的任意一列。
@@ -347,14 +421,14 @@ $$
     - 不同变量取值不同：即 $Q_i \neq Q_j$ （不同的皇后不能在同一列）。
     - 不在同一对角线：即 $|Q_i - Q_j| \neq |i - j|$（不同的皇后不能在同一对角线上）。
 
-### 算法
+#### 算法
 
 1. **初始化**：随机放置 8 个皇后，使其符合所有行和列约束。
 2. **冲突检测**：计算当前放置下的冲突数，即有多少对皇后彼此攻击。
 3. **冲突最小化**：通过移动某个皇后减少冲突。例如，选择冲突最多的皇后，尝试移动到其他列，看哪个位置的冲突最少。
 4. **迭代**：重复冲突检测和最小化，直到没有冲突（即找到解）或达到预定的最大迭代次数。
 
-## 约束满足问题（CSP, Constraint Satisfaction Problem）
+## 约束满足问题 CSP
 
 约束满足问题将一个系统和它的状态当作一个整体，寻找状态解。
 
@@ -369,7 +443,7 @@ $$
 ### CSP 问题的解
 
 -   在 CSP 问题中，令每个变量一个取值，$\{X_1=v_1, X_2=v_2,...\}$，如果 **不违背任何一个约束条件**，则称为这个 CSP 问题的一个 **可行解**。可能存在多个可行解。
--   如果我们给定一个解的评价方式，则我们还可以寻找一个 **最优解**。**最优解不是一定是可行解**，但是是可以找到最好的解。
+-   如果我们给定一个解的评价方式，则我们还可以寻找一个 **最优解**。**最优解不一定是可行解**，但是 **是可以找到的最好的解**。
 
 在实际约束问题中，我们可能需要寻找：
 
@@ -379,9 +453,9 @@ $$
 
 ### 把问题建模成约束满足问题 CSP 的原因
 
--   可以表示很宽泛的类别的问题。设计通用 CSP 求解器，使用 **自动优化技术** 迅速排除大量的无关搜索空间，比基于状态空间的搜索算法更快。
+-   表示能力强：CSP 可以表示很宽泛的类别的问题。设计通用 CSP 求解器，使用 **自动优化技术** 迅速排除大量的无关搜索空间，比基于状态空间的搜索算法更快。
 
--   知道为什么某个赋值不是解。发现一个部分赋值不是解时，知道是哪个变量的赋值违背了哪个约束，并可以立即放弃对当下路径后续探索。
+-   可解释性：CSP 的约束条件使得我们容易知道为什么某个赋值不是解（违背了哪个约束），并可以立即放弃对当下路径后续探索。
 
 许多使用传统方法不能解出的问题，建模成 CSP 问题可以很快地解出。
 
@@ -406,9 +480,9 @@ $$
 
 -   **绝对约束**：违背这种约束意味着排除了成为解的可能性。
 
--   **优先约束** （preference constraints）：用来描述哪些是优先选择的，**可用表示来优先**。
+-   **优先约束** （preference constraints）：用来描述哪些是优先选择的，**可用表示求最优解**。这意味着，满足这个约束越好，获得的解就越好。
 
-    优先约束一般会观察给每个变量的取值增加一个代价（costs），这样，含有优先约束的 CSP 问题就称为约束优化问题（constraint optimization problem），简称 COP。
+    优先约束一般会实现为给每个变量的取值增加一个代价（costs），这样，含有优先约束的 CSP 问题就称为约束优化问题（constraint optimization problem），简称 COP。
 
 ### 约束传播：CSP 中的推理
 
@@ -420,13 +494,13 @@ $$
 
 有时，预处理就可以解决全部问题，不用再进行搜索。
 
-### 点一致
+#### 点一致
 
 点一致指变量的所有取值都满足一元约束。通过点一致性算法去除不满足一元约束的取值。
 
 > 例：如果 $X$ 的取值范围是 $\{1, 2, 3\}$，且有约束 $X \neq 2$，那么经过点一致处理后，$X$ 的取值范围变为 $\{1, 3\}$。
 
-### 边一致
+#### 边一致
 
 边一致指变量的所有取值都满足二元约束。
 
@@ -434,8 +508,11 @@ $$
 
 我们称一个 **网络是边一致** 的，如果每个变量相对于 **其他任意变量** 都是边一致的。
 
-### 约束传播的应用
-
-在 CSP 中，我们使用约束传播来去除不合理的解，从而缩小值域。根据约束的分类（如一元、二元、三元等），我们可以有相应的约束传播方法。除了点一致和边一致，还有三元约束、四元约束等。
+#### 约束传播的应用
 
 使用约束传播可以去除不合理的解，从而缩小值域，提高解决问题的效率。
+
+### 约束满足问题的通用求解方法
+
+-   通用约束求解器：如 MiniZink
+-   自动生成求解程序：如 PDL2C
