--- a/Note/15强化学习基本思想和问题模型.md
+++ b/Note/15强化学习基本思想和问题模型.md
@@ -1,7 +1,7 @@
 # 强化学习基本思想和问题模型
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
@@ -303,6 +303,7 @@ $a$ 的动作价值：等价于 $s$ 下，对所有经动作 $a$ 可以到达的
 #### 增量计算动作价值
 
 **增量更新公式**：为了避免存储大量历史数据，使用增量法更新动作价值：
+
 $$
 Q_{n+1} = Q_n + \frac{1}{n} [R_n - Q_n]
 $$
@@ -546,9 +547,9 @@ $$
     H_{t+1}(A_t) = H_t(A_t) + \alpha (R_t - \bar{R_t})(1 - \pi_t(A_t)) \\
     H_{t+1}(a) = H_t(a) - \alpha (R_t - \bar{R_t})\pi_t(a), \quad \text{for all } a \neq A_t
     $$
-    
+
     当 $R_t > \bar{R_t}$​ 时，**我们认为此动作的奖励优于奖励均值（参照值），所以提高他的优先级，降低其他动作的优先级**
-    
+
     否则，降低此动作的优先级，提高其他动作的优先级。
 
 $\bar{R_t}$ 除了设定为奖励均值外，也可以人为固定，如果能够 **合理的划分出好的动作和坏的动作**，那就是成功的：
