--- a/Note/16马尔可夫决策过程和动态规划.md
+++ b/Note/16马尔可夫决策过程和动态规划.md
@@ -1,7 +1,7 @@
 # 马尔可夫决策过程和动态规划
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
@@ -16,6 +16,7 @@
     -   $R(s, a, r)$ 表示在当前状态 $s$ 和动作 $a$ 下，获得奖励 $r$ 的 **概率**
 
 **马尔可夫性质**：在当前状态 $S_t$ 下，**状态转移模型 $P$ 和奖励函数 $R$ 仅与 $S_t$ 有关**，和之前的状态及动作无关，也即：
+
 $$
 P(S_{t+1} \mid S_t, A_t, S_{t-1}, A_{t-1}, \ldots, S_0, A_0) = P(S_{t+1} \mid S_t, A_t)
 $$
