--- a/Note/10循环神经网络.md
+++ b/Note/10循环神经网络.md
@@ -1,7 +1,7 @@
 # 循环神经网络
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
