--- a/Note/14对抗搜索.md
+++ b/Note/14对抗搜索.md
@@ -1,7 +1,7 @@
 # 对抗搜索
 
 <center>
-  by <a href="https://github.com/zhuozhiyongde">Arthals</a> / GPT4 / Claude 3 Opus
+  by <a href="https://github.com/zhuozhiyongde">Arthals</a>
   <br/>
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
