--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -17,16 +17,12 @@
 ### 机器学习的任务
 
 1. **有监督学习**：这种方式需要提前给模型提供 “正确答案”，让模型在学习过程中有明确的参照。比如：
-
     - **分类问题**：判断输入数据属于哪个类别，例如判断一封邮件是不是垃圾邮件。
     - **回归问题**：预测一个连续值，例如预测房屋的价格。
-
 2. **无监督学习**：模型在没有 “正确答案” 的情况下自我学习，它会尝试理解数据的结构。
-
     - **聚类**：将数据分组，组内相似度高，组间相似度低，例如将顾客分为不同的群体。
     - **密度估计**：估计数据生成的概率分布，例如在数据中找出异常点。
     - **降维**：减少数据的复杂性，同时保留重要特征，例如用于数据可视化。
-
 3. **半监督学习**：结合了有监督和无监督学习，使用大量未标记数据和少量标记数据进行学习。
 
 4. **弱监督学习**：标记数据不完全、不确切或不可靠，但仍旨在通过这些不完美的标记来进行学习。
@@ -48,7 +44,9 @@
 
 #### 二元分类（Binary Classification）
 
-二元分类是一个简单的分类问题，只有两个类别的结果。损失函数为 0/1 损失，即如果预测正确，损失为 0；预测错误，损失为 1。
+二元分类是一个简单的分类问题，只有两个类别的结果。
+
+损失函数为 **0/1 损失**，即如果预测正确，损失为 0；预测错误，损失为 1。
 
 **二元分类的 0/1 损失函数**
 
@@ -60,7 +58,9 @@ $$
 
 #### 回归（Regression）
 
-在回归任务中，我们预测 **连续的输出值**。损失函数为平方损失，即预测值与真实值之差的平方。
+在回归任务中，我们预测 **连续的输出值**。
+
+损失函数为 **平方损失**，即预测值与真实值之差的平方。
 
 **回归的平方损失函数**
 
@@ -72,9 +72,11 @@ $$
 
 #### 密度估计（Density Estimation）
 
-密度估计是 **估计输入数据概率分布** 的任务。损失函数为负对数似然损失，这里衡量的是模型对真实分布的拟合程度。
+密度估计是 **估计输入数据概率分布** 的任务。
 
 密度估计属于 **无监督学习**，它的目标是估计一个变量的概率分布。这不需要标签数据。
+
+损失函数为 **负对数似然损失**，这里衡量的是模型对真实分布的拟合程度。
 
 **密度估计的负对数似然损失函数**
 
@@ -82,21 +84,41 @@ $$
 \text{loss}(f(X)) = -\log(P_f(X))
 $$
 
-其中，$P_f(X)$ 是模型预测的数据点 $X$ 的概率。负对数似然损失函数衡量的是模型对数据生成概率的估计与实际分布的拟合程度。这个值越小，表示模型的估计越接近真实分布。
+其中，$P_f(X)$ 是模型预测的数据点 $X$ 的概率（也即模型认为数据点 $X$ 出现的可能性）。负对数似然损失函数衡量的是模型对数据生成概率的估计与实际分布的拟合程度。这个值越小，表示模型的估计越接近真实分布。
 
 #### 机器学习的理想目标
 
-机器学习的目标是找到一个预测规则 $f$，它可以最小化损失函数的期望值。这里提到最小化的是联合分布 $P_{XY}$​ 下的损失期望，实际中我们通常通过样本数据来近似这个期望。
+机器学习的目标是构建适用于任何测试数据点 $(X, Y) \sim P_{XY}$ 的预测规则 $f : \mathcal{X} \to \mathcal{Y}$ ，它可以最小化损失函数的期望值：
+
+$$
+\min_f \mathbb{E}_{XY} [\text{loss}(Y, f(X))]
+$$
+
+其中，$\mathbb{E}_{XY}$ 表示对联合分布 $P_{XY}$ 的期望，$\text{loss}(Y, f(X))$​ 是预测误差。
+
+但是，我们并不知道数据的真实分布情况，无法直接求解这个式子。
+
+为此，我们通过使用引入训练数据（可以看做是经验）来近似这个期望。
+
+训练数据可以表示为 $\{(X^{(j)}, Y^{(j)})\}_{j=1}^n$ ，它提供了关于 $P_{XY}$ 分布的一些信息。
+
+如此一来，我们的目标就变成了
+
+$$
+\min_f \frac{1}{n} \sum_{j=1}^n \text{loss}(Y^{(j)}, f(X^{(j)}))
+$$
 
 ## 线性模型
 
-线性模型：线性模型就是要学习特征 $X$ 的一种线性组合来进行预测，进行运算 $y = wX + b$，其中 $w$ 是 $X$ 的权重，$b$ 是偏置，$y$ 是预测值。我们希望通过学习得到最优的 $w$ 和 $b$，使得预测值 $y$ 与真实值 $y_{GT}$ 的误差最小。
+线性模型：线性模型就是要学习特征 $X$ 的一种线性组合来进行预测，进行运算 $y = wX + b$，其中 $w$ 是 $X$ 的权重，$b$ 是偏置，$y$ 是预测值。
+
+我们希望通过学习得到最优的 $w$ 和 $b$，使得预测值 $y$ 与真实值（ground truth） $y_{GT}$ 的误差最小。
 
 其中，$X$ 具有 $n$ 个特征，$X = (x_1, x_2, ..., x_n)$，其每个分量都代表一个特征，$y = w_1x_1 + w_2x_2 + ... + w_nx_n + b$，是 $X$ 各个特征的线性组合。
 
-线性回归：给定数据 $D = \{(x_1, y_1), (x_2, y_2), \ldots, (x_n, y_n)\}$, 用一个线性模型估计最接近真实 (y) (ground truth) 的连续标量: $f(x_i)=w^T \cdot x_i + b$， 也就是要 $f(x_i) \approx y_i$
+**线性回归**：给定数据 $D = \{(x_1, y_1), (x_2, y_2), \ldots, (x_n, y_n)\}$, 用一个线性模型估计最接近真实 $y$ 的连续标量: $f(x_i)=w^T \cdot x_i + b$， 也就是要 $f(x_i) \approx y_i$
 
-$(w, b)$ 是要学习的模型参数.
+其中，$(w, b)$ 是要学习的模型参数。
 
 也就是要：
 
@@ -173,11 +195,11 @@ $$
 \hat{\beta}=( \mathbf{A}^{\mathrm{T}} \mathbf{A} )^{-1} \mathbf{A}^{\mathrm{T}} \mathbf{Y}
 $$
 
-但是，很多情况下，$\mathbf{A}$ 并不可逆，比如 $n < p$ 时，我们可以证明它一定不可逆。而且即使 $\mathbf{A}$ 可逆（ **此时要求样本个数 $n$ 要大于等于待估参数量 $p$，包含截距项，同时 $\mathbf{A}^T\mathbf{A}$ 满秩** ），当它的维度很大时，计算也是很昂贵的。
+但是，很多情况下，$\mathbf{A}$ 并不可逆，比如 $n < p$ 时，我们可以证明它一定不可逆。而且即使 $\mathbf{A}$ 可逆（ **此时要求样本个数 $n$ 要大于等于待估参数量 $p$，包含截距项，同时 $\mathbf{A}^T\mathbf{A}$ 满秩 / 可逆，我们称此式有闭式解** ），当它的维度很大时，计算也是很昂贵的。
 
 所以，我们可以通过梯度下降法来求解最优的 $\beta$。
 
-![image-20240307162044682](./03机器学习介绍与线性模型.assets/image-20240307162044682.png)
+![gd](./03机器学习介绍与线性模型.assets/gd.png)
 
 梯度下降法的思想是：从随机选取的 $\beta$ 开始，每次沿着梯度的反方向走一步（走的多长由学习率 Learning Rate 决定），直到收敛。只要这个损失函数是凸函数，我们总能优化到最优点。
 
@@ -233,9 +255,9 @@ $$
 
 这个式子的一个直观理解，就是假设 $\beta$ 是一个二维的，那么我们可以可视化这个分布：
 
-![image-20240307185459294](./03机器学习介绍与线性模型.assets/image-20240307185459294.png)
+![gaussian_distribution](./03机器学习介绍与线性模型.assets/gaussian_distribution.png)
 
-那么在这个图中，任意一个点都代表一个高斯分布，而 $f(x_1,x_2)$ 就是这个点的概率密度。我们可以看到，这个分布是关于原点对称的，这也是 $p(\beta)$ 中的 $\beta^T\beta$ 的作用，这代表了我们对于变量的顺序是没有偏好的。
+那么在这个图中，任意一个点都对应一个高斯分布，而 $f(x_1,x_2)$ 就是这个点的概率密度。我们可以看到，这个分布是关于原点对称的，这也是 $p(\beta)$ 中的 $\beta^T\beta$ 的作用，这代表了我们对于变量的顺序是没有偏好的。
 
 带入进行复杂的数学推导 [^1] 后，我们就可以得到：
 
@@ -267,6 +289,11 @@ $$
 
 简而言之：**岭回归无法剔除变量，套索回归的优良性质是能产生稀疏性，可以将一些不重要的回归系数缩减为 0，达到剔除变量的目的。** [^2]
 
+> 可以这么记忆：对于较小的数值，考虑两个惩罚项的导数 / 梯度：
+>
+> -   对于 L1，惩罚项导数是一个常数，所以它会不区分大数值和小数值，因而小数值会更容易在这个梯度下降到 0，导致稀疏解
+> -   对于 L2，惩罚项导数是一个一次项，所以它会区分大数值和小数值，对于大数值的下降更大，而对于小数值的下降很小，甚至趋于 0，所以他只是容易让参数变小，但不太会让它们达到 0。
+
 最终，我们得到广义的线性模型，我们可以考虑任意一种单调可微的函数 $g(.)$：
 
 $$
@@ -275,11 +302,11 @@ $$
 
 其中，$g(.)$ 是激活函数，它的作用是将线性模型的输出转换为我们想要的输出，也即将线性模型的输出转换为一个非线性的预测值。比如，当 $g(.)$ 是恒等函数时，我们就得到了线性回归；当 $g(.)$​ 是 sigmoid 函数时，我们就得到了逻辑回归。
 
-![image-20240307193801046](./03机器学习介绍与线性模型.assets/image-20240307193801046.png)
+![nonlinear](./03机器学习介绍与线性模型.assets/nonlinear.png)
 
 在这个图中，$g$ 就是 $\log$ 函数，而对应的 $g^{-1}$ 就是 $e^x$ 指数函数。通过这个变换，我们将一个线性的 $y'= (w^Tx+b)$ 变换得到了非线性的 $y$。
 
-## Reference
+## Credit
 
 关于最大化高斯分布的后验概率等价于最小化二阶范数的具体推导，还有一个由 GPT4 生成的推导过程：
 
