--- a/Note/09精选生成对抗网络.md
+++ b/Note/09精选生成对抗网络.md
@@ -6,7 +6,7 @@
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
 
-本节中，将主要介绍一下几种 GAN 的变体，介绍他们相较于 Vanilla GAN 的改进。
+本节中，将主要介绍一下几种 GAN 的变体，以及他们相较于 Vanilla GAN 的改进。
 
 ## 条件对抗神经网络（Conditional GAN, cGAN）
 
@@ -182,7 +182,7 @@ CycleGAN 的核心思想是：
 
 主要应用：风格迁移、季节转换、照片增强等无配对图像到图像的转换任务。
 
-### Cycle 的缺陷
+### CycleGAN 的缺陷
 
 CycleGAN 的目标是确保图像在经过一系列转换后，仍然能够保留足够的信息，以便可以恢复到原始状态。
 
