--- a/Note/10循环神经网络.md
+++ b/Note/10循环神经网络.md
@@ -224,7 +224,10 @@ $$
 新的细胞状态是通过结合遗忘门的结果（决定丢弃哪些信息）和输入门的结果（决定添加哪些新信息）来更新的：
 
 $$
-\boldsymbol{C_t} = \boldsymbol{f_t} \odot \boldsymbol{C_{t-1}'} + \boldsymbol{i_t} \odot \tilde{\boldsymbol{C_t}}
+\begin{array}
+\boldsymbol{C_t} &= \boldsymbol{f_t} \odot \boldsymbol{C_{t-1}} + \boldsymbol{i_t} \odot \tilde{\boldsymbol{C_t}}\\
+&=\boldsymbol{C_{t-1}'} + \boldsymbol{i_t} \odot \tilde{\boldsymbol{C_t}}
+\end{array}
 $$
 
 #### 计算输出门（Output Gate）和新的隐藏状态
