--- a/Note/14对抗搜索.md
+++ b/Note/14对抗搜索.md
@@ -217,7 +217,9 @@ $$
 ### 剪枝条件总结 [^1]
 
 -   当一个 Min 节点的 $v$ 值 ≤ 任何一个祖先节点的最大上界 $α$ 时 ，剪掉该节点及其所有子节点
--   当一个 Max 节点的 $v$ 值 ≥ 任何一个祖先节点的最小上界 $β$ 时 ，剪掉该节点及其所有子节点
+-   当一个 Max 节点的 $v$ 值 ≥ 任何一个祖先节点的最小上界 $β$​ 时 ，剪掉该节点及其所有子节点
+
+整体实战可以参考 [7forz / 一图流解释 Alpha-Beta 剪枝(Alpha-Beta Pruning)](https://www.7forz.com/3211/) 理解，这个链接里的题也比较类似于往年题里的，强烈建议阅读。
 
 ### 二合一伪代码
 
