--- a/Note/15强化学习基本思想和问题模型.md
+++ b/Note/15强化学习基本思想和问题模型.md
@@ -37,6 +37,8 @@
 
     衡量一个环境的 **复杂程度**：某个状态下，智能体采取某个动作后，转移到下一个状态的状态转移模型。可能到达的所有状态构成了 **状态空间** (state space)。所有状态下可行动作，构成 **动作空间** (action space)。
 
+    **由此可见，状态转移的不确定性可能来自环境（来自 $P$ 的数值本身），也可能来自策略（来自 $P$ 的参数 $A$）。**
+
 5. **终止状态** $S_T$ (terminate state)
 
 6. **奖励** $R$ (reward)
@@ -51,7 +53,8 @@
 
 -   $A_t \leftarrow \pi(S_t)$ 用以表示智能体的策略，也即在每一个状态 $S_t$ 下选择动作 $A_t$ 的规则或函数。
 -   策略 $\pi$ 是状态 $S$ 到动作 $A$ 的映射关系，给出了智能体在状态 $S$ 下如何选择动作 $A$ 的决策方法。
--   注意：策略 $\pi$ 是 **全局性** 的，任何状态下都要能够给出动作选择。
+-   注意：策略 $\pi$​ 是 **全局性** 的，任何状态下都要能够给出动作选择。
+-   **确定性策略 $\pi$**：对于每个状态 $s \in S$，策略 $\pi(s)$ 总是返回一个确定的动作 $a \in A$。
 
 #### 目标（问题的解）
 
@@ -285,12 +288,10 @@ $a$ 的动作价值：等价于 $s$ 下，对所有经动作 $a$ 可以到达的
 
 ### 动作价值计算
 
--   **价值估计**：动作 $a$ 的价值 $Q^*(a)$ 是选择动作 $a$ 时的期望奖励：
-
+-   **价值估计**：动作 $a$ 的价值 $Q^*(a)$ 是选择动作 $a$ 时的期望奖励（老虎机问题中，状态 $s$ 是不变的，不考虑 $s$ 了）：
     $$
     Q^*(a) \approx \mathbb{E}[R_t | A_t = a]
     $$
-
 -   **经验平均**：通过对每个动作的奖励进行平均来估计其价值：
     $$
     Q_t(a) = \frac{\sum_{i=1}^{t-1} R_i \cdot \mathbb{1}_{A_i=a}}{\sum_{i=1}^{t-1} \mathbb{1}_{A_i=a}}
@@ -475,7 +476,7 @@ $$
 
 ![epsilon_vs_optimstic](15强化学习基本思想和问题模型.assets/epsilon_vs_optimstic.png)
 
-这张图展示了两种不同的 $\epsilon$- 贪心策略在一个多臂老虎机问题（multi-armed bandit problem）中的表现。
+这张图展示了两种不同的 $\epsilon$ 贪心策略在一个多臂老虎机问题（multi-armed bandit problem）中的表现。
 
 1. 灰色曲线 （真实初值，$\epsilon$ 贪心）
 
