--- a/Note/16马尔可夫决策过程和动态规划.md
+++ b/Note/16马尔可夫决策过程和动态规划.md
@@ -499,7 +499,9 @@ $$
 
 ### Bootstrap
 
-Bootstrap（自举）是一种统计方法，用于估计样本的分布。它通过反复从原始数据集中有放回地抽样，生成多个子样本，然后计算这些子样本的统计量来估计总体的统计性质。在强化学习中，bootstrap 是指 **计算一个状态的估值是依据它的后继状态的估值**。
+**Bootstrap（自举）** 是一种统计方法，用于估计样本的分布。它通过反复从原始数据集中 **有放回地抽样**，生成多个子样本，然后 **计算这些子样本的统计量来估计总体的统计性质**。
+
+在强化学习中，bootstrap 是指 **计算一个状态的估值是依据它的后继状态的估值**。
 
 ### 蒙特卡洛学习
 
@@ -532,6 +534,8 @@ $$
 其中，$\alpha$ 是学习率，$\gamma$ 是折扣因子，$R$ 是当前奖励，$V(s')$​ 是后继状态的估值。
 
 ## 总结
+
+下表重要，要记住。
 
 ![summary](16马尔可夫决策过程和动态规划.assets/summary.png)
 
