--- a/Note/17人工智能系统实践.md
+++ b/Note/17人工智能系统实践.md
@@ -89,8 +89,10 @@
 
         **众包（Crowdsourcing）**： 通过外包给大众来获取大量真实标签。
 
-    - **否**： 如果预算不足，使用弱监督。
+        网约车、外卖也可以理解为众包！
 
+    - **否**： 如果预算不足，使用弱监督。
+    
         **弱监督（Weak supervision）**： 使用弱标签（不精确或部分标注）来训练模型。
 
 ## 半监督学习 Semi-supervised learning
@@ -151,17 +153,23 @@
 
 弱监督学习是指 **使用不完全、噪音较多或不精确的标签** 进行训练。
 
-前文描述的半监督学习是其实是一种弱监督学习。
+半监督学习不属于弱监督学习，半监督的标签数据是准确的。
 
 ## 自监督 Self-supervised Learning
 
 **自监督学习**：通过数据自身构造预测标签的监督学习方法
 
+利用数据自身来生成标签，而不需要人工标注（ **所以自监督属于无监督学习** ）。通过数据内部的结构或特征，模型可以学习有用的表示。
+
 -   文本自监督任务：预测下一个词（GPT），完形填空（BERT）
 
     文本大模型都是基于自监督学习任务
 
+    语言模型：给定一句话的一部分，模型需要预测接下来的单词。例如，给出 “我今天吃了”，模型预测 “苹果”。通过这种预测，模型学会了语言的语法和语义。
+
 -   图像自监督任务：视频预测下一帧，拼图，对比学习
+
+    图像填充：给定一张部分遮挡的图片，模型需要预测被遮挡的部分。通过这种方式，模型学会了图片的结构和内容。
 
 自监督学习主要用于训练 **特征提取器**。
 
@@ -169,7 +177,7 @@
 
 ### 对比学习
 
-对比学习：是一种自监督学习方法，主要用于训练神经网络以学习有意义的表示（representation）
+对比学习：是一种自监督学习方法（ **所以也属于无监督学习** ），主要用于训练神经网络以学习有意义的表示（representation）
 
 1. **正样本对**：从 **同一个图像** 通过 **不同的增强方式** （如修改颜色、裁剪等）得到两个不同的版本，这两个版本作为正样本对。
 
@@ -184,6 +192,22 @@
     正样本对的表示向量应该尽可能相似，而负样本对的表示向量应该尽可能不同。
 
     常用的损失函数是对比损失（Contrastive Loss）或 InfoNCE 损失。
+
+### 各种学习方式总结 [^1]
+
+-   **监督学习**：使用完整和准确的全标注数据。
+
+-   **半监督学习** 使用一部分标注数据和一部分无标签数据。
+
+    可以理解为，监督学习标注了 100%，无监督学习标注了 0%，半监督学习标注了 $(0\%,100\%)$
+
+-   **弱监督学习**: 使用不完全、不精确或不完全正确标注的数据。弱强调的是标注不够强（准确），模型通过学习这些低质量的标签来完成一个更困难的任务，从而可以克服标注难度高或噪声大的问题，提高模型泛化能力。
+
+-   **无监督学习**：使用不带标签的数据训练模型。有无强调的是是否有标注。
+
+-   **自监督学习**：使用数据本身生成的任务进行训练，无需人工标注。
+
+    自监督学习是无监督学习的一种。
 
 ## 数据预处理
 
@@ -208,3 +232,7 @@
 -   特征选择：选择对模型最有用的特征，去除无关或冗余的特征。
 -   特征提取：从原始数据中提取新的特征，如通过组合现有特征或使用降维技术如 PCA。
 -   特征构造：创建新的特征，如通过数学变换或业务知识。
+
+
+
+[^1]:[钰宸y / 全监督，自监督，半监督，弱监督，无监督的关系和区别](https://blog.csdn.net/qq_40721108/article/details/129798441)
